--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,17 +2,21 @@
     <string name="app_name">StudyBuddy</string>
 
     <!-- tabs -->
-    <string name="title_subjects">Subjects</string>
-    <string name="title_marks">Marks</string>
-    <string name="title_more_papers">More Papers</string>
+    <string name="title_subjects">Past Papers</string>
+    <string name="title_progress">Progress</string>
     <string name="title_settings">Settings</string>
+    <string name="title_help">Help</string>
 
     <!-- Buttons  -->
     <string name="begin_exam">Begin Exam</string>
     <string name="end_exam">End Exam</string>
+    <string name="next_question">Next Question</string>
 
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- multiple choice questions -->
+    <string name="correct">correct</string>
+    <string name="wrong">wrong</string>
+    <string name="selected_answer">selected answer:</string>
+    <string name="correct_answer">correct answer:</string>
 
 
 </resources>
