--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StudyBuddy</string>
+    <string name="app_name">Brainstein papers</string>
 
     <!-- tabs -->
     <string name="title_subjects">Past Papers</string>
