--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="selected_answer">selected answer:</string>
     <string name="correct_answer">correct answer:</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- help screen text -->
+    <string name="help_text">Get instant help from a real tutor with Brainstein Student! Click the button below</string>
 
 
 </resources>
